# podcast-summarizer

./: .gitignore  README.md  pyproject.toml
podcast_summarizer/: cli.py  summarizer.py  youtube.py
