[tool.poetry]
name = "podcast-summarizer"
version = "0.1.0"
description = "Summarizes podcasts."
authors = ["Diego Quinteiro <diegoquinteiro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "podcast_summarizer"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
click = "^8.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
